chatbot,daily,meditation done

--- a/Entry Page/index1.html
+++ b/Entry Page/index1.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-571-hexashop
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="index.html" class="logo">
-                            <img src="assets/images/logo.png">
+                            Zenalign
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
@@ -102,7 +102,7 @@ https://templatemo.com/tm-571-hexashop
                                                 <h4>Sun Salutation</h4>
                                                 <p>A dynamic sequence of poses that energizes the body and calms the mind </p>
                                                 <div class="main-border-button">
-                                                    <a href="#">Get Started</a>
+                                                    <a href="C:\Users\Liyo Tom\Documents\Leo\Materials\S6\Mini Prjct\Yoga Test 19(5,12)extension\Daily\index.html">Get Started</a>
                                                 </div>
                                             </div>
                                         </div>
