--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   <a class="nav-link" href="contact.html"> Contact us </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="guard.html">Developers</a>
+                  <a class="nav-link" href="C:\Users\Liyo Tom\Documents\Leo\Materials\S6\Mini Prjct\Yoga Test 19(5,12)extension\chatbot\index.html">Zenbotx</a>
                 </li>
                 <li class="nav-item" id="signInBtn"><a class="nav-link" href="signin.html">Sign In</a></li>
                 <li class="nav-item" id="signOutBtn" style="display: none;"><a class="nav-link" href="#" onclick="signOut()">Sign Out</a></li>
