more news content updated,developer team roles assigned

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                 Joel T John
               </h5>
               <h6 class="">
-                Teamlead
+                Team Supervisor
               </h6>
             </div>
           </div>
@@ -610,7 +610,7 @@
                 Liyo Tom
               </h5>
               <h6 class="">
-                Frontend designer
+               Web Developer
               </h6>
             </div>
           </div>
@@ -640,7 +640,7 @@
                 Esther Binu
               </h5>
               <h6 class="">
-                Backend Developer
+                Marketing Lead
               </h6>
             </div>
           </div>
